--- a/src/App.scss
+++ b/src/App.scss
@@ -1,22 +1,28 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 .container {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
   grid-template-rows: auto;
-  row-gap: 15px;
+  // row-gap: 15px;
   grid-template-areas:
     'header header header header'
     'main main main main'
     'footer footer footer footer';
 
-  @media (max-with: 820) {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-template-rows: auto;
-    grid-template-areas:
-      'header header header header'
-      'main main main main'
-      'footer footer footer footer';
-  }
+  // @media (max-with: 820) {
+  //   display: grid;
+  //   grid-template-columns: 1fr 1fr 1fr 1fr;
+  //   grid-template-rows: auto;
+  //   grid-template-areas:
+  //     'header header header header'
+  //     'main main main main'
+  //     'footer footer footer footer';
+  // }
 
   .header {
     grid-area: header;
