--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -5,6 +5,7 @@
   width: 100%;
   height: 50px;
   position: fixed;
+  transition: 0.5s;
 
   @media (max-width: 375px) {
     grid-template-columns: 90px 1fr;
@@ -26,5 +27,6 @@
 
   a {
     margin-right: 5px;
+    text-decoration: none;
   }
 }
