--- a/src/pages/HomePage/HomePage.scss
+++ b/src/pages/HomePage/HomePage.scss
@@ -1,6 +1,6 @@
 .page-body {
   display: grid;
-  grid-template-rows: 1fr 1fr;
+  grid-template-rows: auto;
 
   .hero {
     // grid-area: hero;
@@ -10,7 +10,7 @@
     justify-content: center;
     background-color: lightgrey;
     width: 100%;
-    height: 70vh;
+    height: 80vh;
   }
 
   .about-section {
@@ -19,6 +19,5 @@
     grid-row: 2;
     align-content: center;
     justify-content: center;
-    height: 75vh;
   }
 }
