--- a/src/pages/HomePage/HomePage.scss
+++ b/src/pages/HomePage/HomePage.scss
@@ -3,7 +3,6 @@
   grid-template-rows: auto;
 
   .hero {
-    // grid-area: hero;
     display: grid;
     grid-row: 1;
     align-content: center;
@@ -11,13 +10,17 @@
     background-color: lightgrey;
     width: 100%;
     height: 80vh;
+
+    @media (max-width: 820px) {
+      text-align: center;
+    }
   }
 
   .about-section {
-    // grid-area: about-section;
     display: grid;
     grid-row: 2;
     align-content: center;
     justify-content: center;
+    padding: 20px;
   }
 }
